# parpenet

./: CMakeLists.txt  epanet.c  toolkit.h
data/michael-mair/: EN_goefis.inp  EN_goetzis.inp  EN_hall.inp  EN_innsbruck.inp
data/robert-sitzenfrei/: id1.inp  id2.inp  run19_1_1.inp
src/: CMakeLists.txt  csrmatrix.c  csrmatrix.h  enumstxt.h  epanet.c  funcs.h  hash.h  hydraul.c  mempool.h  smatrix.c  text.h  toolkit.h  types.h  vars.h
